@@ -481,6 +481,11 @@ Save Width/Height:
 Save Tree Expanded State:
   Check box to enable saving of expanded and selected nodes in trees/lists.
 
+.. _Menu-Options-Form-Fast_Tabbing:
+
+Fast Tabbing:
+  Check box to enable fast tabbing navigation by skipping readonly entries.
+
 .. _Menu-Options-Form-Spell_Checking:
 
 Spell Checking:
