@@ -1,3 +1,4 @@
+* Add Fast Tabbing option
 * Remove colors on widgets
 * Bold label of required fields
 * Explicit error message for invalid record
